[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youcal"
version = "0.1.0"
description = "YouTrack + iCal = YouCal - Export YouTrack issues to iCalendar format"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "CXwudi", email = "cxwudi@gmail.com"}
]
dependencies = [
    "httpx>=0.27.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["youcal_core", "youcal_cli"]
